<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.ac.titech.itpro.sdl.hitandblow.MainActivity">

    <TextView
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_start"
        android:textSize="@dimen/message_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_vertical_margin"
        android:layout_marginLeft="@dimen/guess_view_horizontal_margin"
        android:layout_marginRight="@dimen/guess_view_horizontal_margin"
        android:layout_marginTop="@dimen/ui_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/guess_digit_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guess_init_letter"
            android:textSize="@dimen/guess_view_text_size" />

        <TextView
            android:id="@+id/guess_digit_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guess_init_letter"
            android:textSize="@dimen/guess_view_text_size" />

        <TextView
            android:id="@+id/guess_digit_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guess_init_letter"
            android:textSize="@dimen/guess_view_text_size" />

        <TextView
            android:id="@+id/guess_digit_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guess_init_letter"
            android:textSize="@dimen/guess_view_text_size" />
    </LinearLayout>

    <ListView
        android:id="@+id/status_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_vertical_margin"
        android:layout_marginTop="@dimen/ui_vertical_margin"
        android:columnCount="3"
        android:rowCount="4">

        <Button
            android:id="@+id/num_key_1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_1_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_2_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_3_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_4"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_4_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_5"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_5_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_6"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_6_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_7"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_7_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_8"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_8_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/num_key_9"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickNumKey"
            android:text="@string/num_key_9_label"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/control_button"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:onClick="onClickCtrl"
            android:text="@string/ctrl_start"
            android:textSize="@dimen/button_text_size" />

    </GridLayout>
</LinearLayout>
